# HomeDirect_ws

./: .gitignore  README.md  Write.py  cheat_sheet.md  config.txt
config/: config.txt  persons.json
config/Maps/: .pgm  .yaml  Bad.pgm  Bad.yaml  Maps.pgm  Maps.yaml  Schule.pgm  Schule.yaml
install/: local_setup.sh  setup.sh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/nav_main/lib/nav_main/: controller_main  (+1 more)
log/: latest_build  latest_list
src/TB3_Files/Python/: Write.py
src/homedirect_bringup/: package.xml
src/homedirect_bringup/launch/: homedirect.launch.py
src/homedirect_tb3_bringup/: CMakeLists.txt  package.xml
src/homedirect_tb3_bringup/launch/: homedirect.tb3.launch.py
src/nav_main/: package.xml  setup.cfg  setup.py
src/nav_main/nav_main/: client_rfid.py  commander.py  controller_main.py  example_client.py  room_saver.py
src/tb3_rfid/: package.xml  setup.cfg  setup.py
src/tb3_rfid/launch/: sensors.launch.py
src/tb3_rfid/tb3_rfid/: publish_taginfo_node.py  tag_info_client.py  taginfo_subscriber.py
(+456 files in other folders)
