<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_rfid</name>
  <version>0.0.0</version>
  <description>Package handles publishing Data read with RFID using RC522 as well as subscribing to that data</description>
  <maintainer email="alexander.janzen15@outlook.de">adev</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>spidev</depend>
  <depend>mfrc522</depend>
  <depend>std_msgs</depend>
  
  <test_depend>RPi.GPIO</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
